--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,7 @@ h1{
 	font-weight: 700;
 	color: #4d4d4d;
 	font-size: 60px;
-	text-transform: uppercase;
+/*	text-transform: uppercase; */
 	letter-spacing: -1px;
 	float: left;
 	margin-bottom: 20px;
