--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,7 @@ color: #4d4d4d;
 position: relative;
 font-family: 'Roboto', sans-serif;
 text-align: left;
-background: url(../images/bg.png) left top repeat;
+background: url(../../images/bg.png) left top repeat;
 }
 
 
